--- a/assets/style.css
+++ b/assets/style.css
@@ -36,7 +36,7 @@
 	width:100%;
 	height:615px;
 	background:#E5E5E5;
-	background-image: url("background.jpeg");
+	background-image: url("../images/designer/background.jpeg");
 	border-radius: 0px 0px 75px 75px;
 }
 
