--- a/view/equipe.html
+++ b/view/equipe.html
@@ -4,7 +4,7 @@
 	<head>
 		<title>EcompJr</title>
 		<meta charset="utf-8">
-		<link rel="stylesheet" type="text/css" href="style.css" />
+		<link rel="stylesheet" type="text/css" href="../assets/style.css"/>
 		<link rel="shortcut icon" href="icon.png" type="image/x-png"/>
 	</head>
 
@@ -13,7 +13,7 @@
 
 		<div id="menu">
 			<ul>
-				<li><a href="index.html#designer_home"><img src="logoNome.png"></a></li>
+				<li><a href="index.html#designer_home"><img src="../images/designer/logoNome.png"></a></li>
 				<li><a href="index.html#designer_we_are"> Quem Somos</a></li>
 				<li><a href="index.html#designer_team"> Equipe</a></li>
 				<li><a href="index.html#designerService"> Serviços</a></li>
@@ -39,7 +39,7 @@
 			<div class="container_portfolio">
 
 				<div>
-					<img class="container_team" src="orientador-1.jpg">
+					<img class="container_team" src="../images/members/orientador-1.jpg">
 					<div> 
 						<a><button class="buttonPortfolio">
 							<stong>Victor Sarinho</strong>
@@ -61,7 +61,7 @@
 			<div class="container_portfolio">
 
 				<div>
-					<img class="container_team" src="member-05.jpg">
+					<img class="container_team" src="../images/members/member-05.jpg">
 					<div> 
 						<a><button class="buttonPortfolio"> 
 							<stong>Marcos Antonio</strong>
@@ -73,7 +73,7 @@
 				</div>
 
 				<div>
-					<img class="container_team" src="member-11.jpg">
+					<img class="container_team" src="../images/members/member-11.jpg">
 					<div> 
 						<a><button class="buttonPortfolio">
 							<stong>Natália Rosa</strong>
@@ -85,7 +85,7 @@
 				</div>
 
 				<div>
-					<img class="container_team" src="member-08.jpg">
+					<img class="container_team" src="../images/members/member-08.jpg">
 					<div> 
 						<a><button class="buttonPortfolio">
 							<stong>Rodrigo Santos</strong>
@@ -97,7 +97,7 @@
 				</div>
 
 				<div>
-					<img class="container_team" src="member-09.jpg">
+					<img class="container_team" src="../images/members/member-09.jpg">
 					<div> 
 						<a><button class="buttonPortfolio">
 							<stong>Carlos Tinin</strong>
@@ -113,7 +113,7 @@
 			<!--segunda FILA IMAGEM-->
 			<div class="container_portfolio">
 				<div>
-					<img class="container_team" src="member-01.jpg">
+					<img class="container_team" src="../images/members/member-01.jpg">
 					<div> 
 						<a><button class="buttonPortfolio">
 							<stong>Adriel Brito</strong>
@@ -136,7 +136,7 @@
 			<div class="container_portfolio">
 
 				<div>
-					<img class="container_team" src="member-13.jpg">
+					<img class="container_team" src="../images/members/member-13.jpg">
 					<div> 
 						<a><button class="buttonPortfolio"> 
 							<stong>Anderson da Luz Correia</strong>
@@ -148,7 +148,7 @@
 				</div>
 
 				<div>
-					<img class="container_team" src="member-15.jpg">
+					<img class="container_team" src="../images/members/member-15.jpg">
 					<div> 
 						<a><button class="buttonPortfolio">
 							<stong>Nadime Centeno</strong>
@@ -160,7 +160,7 @@
 				</div>
 
 				<div>
-					<img class="container_team" src="member-06.jpg">
+					<img class="container_team" src="../images/members/member-06.jpg">
 					<div> 
 						<a><button class="buttonPortfolio">
 							<stong>Rafael Brito</strong>
@@ -172,7 +172,7 @@
 				</div>
 
 				<div>
-					<img class="container_team" src="member-03.jpg">
+					<img class="container_team" src="../images/members/member-03.jpg">
 					<div> 
 						<a><button class="buttonPortfolio">
 							<stong>Diego Silva</strong>
@@ -189,7 +189,7 @@
 			<div class="container_portfolio">
 
 				<div>
-					<img class="container_team" src="member-16.jpg">
+					<img class="container_team" src="../images/members/member-16.jpg">
 					<div> 
 						<a><button class="buttonPortfolio"> 
 							<stong>João Samuel</strong>
@@ -201,7 +201,7 @@
 				</div>
 
 				<div>
-					<img class="container_team" src="member-12.jpg">
+					<img class="container_team" src="../images/members/member-12.jpg">
 					<div> 
 						<a><button class="buttonPortfolio">
 							<stong>William de Lima Ribeiro</strong>
@@ -213,7 +213,7 @@
 				</div>
 
 				<div>
-					<img class="container_team" src="member-14.jpg">
+					<img class="container_team" src="../images/members/member-14.jpg">
 					<div> 
 						<a><button class="buttonPortfolio">
 							<stong>Daniel Santa Rosa</strong>
@@ -225,7 +225,7 @@
 				</div>
 
 				<div>
-					<img class="container_team" src="member-07.jpg">
+					<img class="container_team" src="../images/members/member-07.jpg">
 					<div> 
 						<a><button class="buttonPortfolio">
 							<stong>Mateus Guimarães</strong>
@@ -242,7 +242,7 @@
 			<!--segunda FILA IMAGEM-->
 			<div class="container_portfolio">
 				<div>
-					<img class="container_team" src="member-04.jpg">
+					<img class="container_team" src="../images/members/member-04.jpg">
 					<div> 
 						<a><button class="buttonPortfolio">
 							<stong>João Pedro Moura</strong>
