--- a/view/index.html
+++ b/view/index.html
@@ -4,14 +4,14 @@
 	<head>
 		<title>EcompJr</title>
 		<meta charset="utf-8">
-		<link rel="stylesheet" type="text/css" href="style.css"/>
+		<link rel="stylesheet" type="text/css" href="../assets/style.css"/>
 		<link rel="shortcut icon" href="icon.png" type="image/x-png"/>
 	</head>
 	<body>
 <!-------------------MENU----------------------------------------->		
 		<div id="menu">
 			<ul>
-				<li><a href="designer_home"><img src="logoNome.png"></a></li>
+				<li><a href="designer_home"><img src="../images/designer/logoNome.png"></a></li>
 				<li><a href="#designer_we_are"> Quem Somos</a></li>
 				<li><a href="#designer_team"> Equipe</a></li>
 				<li><a href="#designerService"> Serviços</a></li>
@@ -22,7 +22,7 @@
 <!-------------------CAPA----------------------------------------->
 
 		<div id="designer_home">
-				<img class="configurationIcon" src="logoNome.png">
+				<img class="configurationIcon" src="../images/designer/logoNome.png">
 				<div class="textIcon">
 					EMPRESA JÚNIOR DE ENGENHARIA DE COMPUTAÇÃO DA UEFS
 				</div>
@@ -34,7 +34,7 @@
 						<button class="buttonHome">CONHEÇA-NOS</button>
 					</a>
 				</div>
-				<img class="imgIdea" src="IDEIA.png">
+				<img class="imgIdea" src="../images/designer/IDEIA.png">
 		</div>
 <!----------------QUEM SOMOS ------------------------------->
 		<br>
@@ -56,7 +56,7 @@
 
 				<div class="container_mission">
 					<div>
-						<img src="MISSOES.png">
+						<img src="../images/designer/MISSOES.png">
 					</div>
 					<div>
 						<h2>MISSÃO</h2>
@@ -68,7 +68,7 @@
 				
 				<div class="container_vision">
 					<div>
-						<img src="VISAO.png">
+						<img src="../images/designer/VISAO.png">
 					</div>
 					<div>
 						<h2>VISÃO</h2>
@@ -80,7 +80,7 @@
 
 				<div class="container_value">
 					<div>
-						<img src="VALORES.png">
+						<img src="../images/designer/VALORES.png">
 					</div>
 					<div>
 						<h2>VALORES</h2>
@@ -112,7 +112,7 @@
 
 					</div>
 					<div class="team">
-						<img src="equipee.jpg">
+						<img src="../images/equipe/equipee.jpg">
 					</div>
 				</div>	
 		</div>
@@ -126,7 +126,7 @@
 				</div>
 					
 				<div class="service">
-					<img src="servico.png">
+					<img src="../images/designer/servico.png">
 				</div>
 				<br>
 				<div class="serviceText">
@@ -157,7 +157,7 @@
 			<!--PRIMEIRA FILA IMAGEM-->
 			<div class="container_portfolio">
 				<div>
-					<img class="container_img" src="ALFA.png">
+					<img class="container_img" src="../images/sites/ALFA.png">
 					<div> 
 						<a href="https://www.alfaconsultoriajuridicajr.com/">
 						<button class="buttonPortfolio">Alfa JR</button>
@@ -165,7 +165,7 @@
 					</div>
 				</div>
 				<div>
-					<img class="container_img" src="admjr.png">
+					<img class="container_img" src="../images/sites/admjr.png">
 					<div> 
 						<a href="https://www.admjr.com.br/">
 						<button class="buttonPortfolio">ADM JR</button>
@@ -173,7 +173,7 @@
 					</div>
 				</div>
 				<div>
-					<img class="container_img" src="apas.png">
+					<img class="container_img" src="../images/sites/apas.png">
 					<div> 
 						<a href="index.html">
 						<button class="buttonPortfolio">APAS</button>
@@ -181,7 +181,7 @@
 					</div>
 				</div>
 				<div>
-					<img class="container_img" src="life.png">
+					<img class="container_img" src="../images/sites/life.png">
 					<div> 
 						<a href="https://lifejr.org.br/">
 						<button class="buttonPortfolio">Life JR</button>
@@ -194,7 +194,7 @@
 			<!--SEGUNDA FILA IMAGEM-->
 			<div class="container_portfolio">
 				<div>
-					<img class="container_img" src="engetec.png">
+					<img class="container_img" src="../images/sites/engetec.png">
 					<div> 
 						<a href="https://engetecjr.com.br/">
 						<button class="buttonPortfolio">Engetec JR</button>
@@ -202,7 +202,7 @@
 					</div>
 				</div>
 				<div>
-					<img class="container_img" src="carvalho.png">
+					<img class="container_img" src="../images/sites/carvalho.png">
 					<div> 
 						<a href="https://www.carvalhoalves.com.br/">
 						<button class="buttonPortfolio">Carvalho Alves Advocacia</button>
@@ -210,7 +210,7 @@
 					</div>
 				</div>
 				<div>
-					<img class="container_img" src="tecnoexpress.png">
+					<img class="container_img" src="../images/sites/tecnoexpress.png">
 					<div> 
 						<a href="http://www.tecnoexpress.com.br/">
 						<button class="buttonPortfolio">Tecnoexpress</button>
@@ -218,7 +218,7 @@
 					</div>
 				</div>
 				<div>
-					<img class="container_img" src="fbta.png">
+					<img class="container_img" src="../images/sites/fbta.png">
 					<div> 
 						<a href="index.html">
 						<button class="buttonPortfolio"> FBTA </button>
@@ -231,7 +231,7 @@
 			<!--TERCEIRA FILA IMAGEM-->
 			<div class="container_portfolio">
 				<div>
-					<img class="container_img" src="emartes.png">
+					<img class="container_img" src="../images/sites/emartes.png">
 					<div> 
 						<a href="index.html">
 						<button class="buttonPortfolio">Emartes</button>
@@ -240,7 +240,7 @@
 				</div>
 
 				<div>
-					<img class="container_img" src="pollar.png">
+					<img class="container_img" src="../images/sites/pollar.png">
 					<div> 
 						<a href="http://www.pollarrefrigeracao.com.br/">
 						<button class="buttonPortfolio">Pollar Refrigeração</button>
@@ -249,7 +249,7 @@
 				</div>
 
 				<div>
-					<img class="container_img" src="souza.png">
+					<img class="container_img" src="../images/sites/souza.png">
 					<div> 
 						<a href="index.html">
 						<button class="buttonPortfolio">Super Souza</button>
@@ -258,7 +258,7 @@
 				</div>
 
 				<div>
-					<img class="container_img" src="tripeco.png">
+					<img class="container_img" src="../images/sites/tripeco.png">
 					<div> 
 						<a href="index.html">
 						<button class="buttonPortfolio">Tripeco</button>
@@ -277,7 +277,7 @@
 			<br>
 			<div class="container_portfolio">
 				<div>
-					<img class="container_img" src="colegiado.png">
+					<img class="container_img" src="../images/sistemas/colegiado.png">
 					<div> 
 						<a href="http://www.ecomp.uefs.br/">
 						<button class="buttonPortfolio">Colegiado Engenharia Computação</button>
@@ -286,7 +286,7 @@
 				</div>
 
 				<div>
-					<img class="container_img" src="plamol.png">
+					<img class="container_img" src="../images/sistemas/plamol.png">
 					<div> 
 						<a href="index.html">
 						<button class="buttonPortfolio">Plamol</button>
@@ -295,7 +295,7 @@
 				</div>
 
 				<div>
-					<img class="container_img" src="resolucoesUefs.png">
+					<img class="container_img" src="../images/sistemas/resolucoesUefs.png">
 					<div> 
 						<a href="http://uefsresolve.ecompjr.com.br/">
 						<button class="buttonPortfolio">Resoluções UEFS</button>
@@ -314,7 +314,7 @@
 			<br>
 			<div class="container_portfolio">
 				<div>
-					<img class="container_img" src="absman.png">
+					<img class="container_img" src="../images/desktop/absman.png">
 					<div> 
 						<a href="https://absam.io/">
 						<button class="buttonPortfolio">ABSAM</button>
