--- a/view/servicos.html
+++ b/view/servicos.html
@@ -4,13 +4,13 @@
 	<head>
 			<title>EcompJr - Serviços</title>
 			<meta charset="utf-8">
-			<link rel="stylesheet" type="text/css" href="style.css" />
+			<link rel="stylesheet" type="text/css" href="../assets/style.css"/>
 	</head>
 	
 	<body>
 		<div id="menu">
 			<ul>
-				<li><a href="index.html#designer_home"><img src="logoNome.png"></a></li>
+				<li><a href="index.html#designer_home"><img src="../images/designer/logoNome.png"></a></li>
 				<li><a href="index.html#designer_we_are"> Quem Somos</a></li>
 				<li><a href="index.html#designer_team"> Equipe</a></li>
 				<li><a href="index.html#designerService"> Serviços</a></li>
@@ -39,7 +39,7 @@
 					</div>
 
 					<div class="site" >
-						<img src="SITE.png">
+						<img src="../images/designer/SITE.png">
 					</div>
 				</div>
 			</div>
@@ -58,7 +58,7 @@
 					</div>
 
 					<div class="desktop">
-						<img src="DESKTOP.png">
+						<img src="../images/designer/DESKTOP.png">
 					</div>
 				</div>
 			</div>
@@ -77,7 +77,7 @@
 					</div>
 
 					<div class="mobile">
-						<img src="MOBILE.png">
+						<img src="../images/designer/MOBILE.png">
 					</div>
 				</div>
 			</div>
@@ -96,7 +96,7 @@
 					</div>
 
 					<div class="web">
-						<img src="WEB.png">
+						<img src="../images/designer/WEB.png">
 					</div>
 				</div>
 			</div>
@@ -115,7 +115,7 @@
 					</div>
 
 					<div class="ecommerce">
-						<img src="ECOMERCE.png">
+						<img src="../images/designer/ECOMERCE.png">
 					</div>
 				</div>
 			</div>
